Definindo os principais tipos de variaveis em HTML
Modificações conceituais, apenas para fins pedagógicos.

--- a/Exemplo01.html
+++ b/Exemplo01.html
@@ -7,6 +7,22 @@
 
 <p>I will display A B C</p>
 <p>I will display &#65; &#66; &#67;</p>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Declaração de variáveis</title>
 
+<h1>Isto é uma string</h1>
+<p>String - stores text, such as "Hello". String values are surrounded by double quotes.</p>
+<h1>Isto é uma variável int</h1>
+<p>stores integers (whole numbers), without decimals, such as 123 or -123</p>
+<h1>Isto é uma variável tipo floa</h1>
+<p> float - stores floating point numbers, with decimals, such as 19.99 or -19.99</p>
+
+<h1>Isto é uma variável tipo ccaractere char</h1>
+<p>char - stores single characters, such as 'a' or 'B'. Char values are surrounded by single quotes</p>
+ 
+<h1>Isto é uma variável booleana</h1>
+<p>boolean - stores values with two states: true or false</p>
 </body>
 </html> 
